src/test/resources/valid_programs/comparison__int_LE.notc
void main() {
    printInt(8 <= 7);
    printInt(7 <= 7);
    printInt(6 <= 7);

    printInt(15 <= 16);
    printInt(15 <= 15);
    printInt(15 <= 14);

    printInt(-20 <=  10);
    printInt( 20 <= -30);
}
