src/test/resources/semantic_errors/return_void_EQ_void.notc
void main() {
}

bool fun() {
    return main() == main();
}
